# teaching-machine

./: MANIFEST.in  README.md  pyproject.toml
src/name_of_the_machine/: __init__.py  machina.yaml
src/teaching_machine/: __init__.py
